all executables use same form argument/options parsing, removes regex passed Tokens -> categories, 'Generate' -> 'Synthesize'